# pysips

./: .gitignore  .pylintrc  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  tutorial.html  tutorial.ipynb
.github/workflows/: docs.yml  pylint.yml  pypi.yml  pytest.yml
_modules/: index.html
_modules/pysips/: crossover_proposal.html  laplace_nmll.html  metropolis.html  mutation_proposal.html  prior.html  random_choice_proposal.html  regressor.html  sampler.html
api/: modules.html  pysips.html
bayesr/: crossover_proposal.py  laplace_nmll.py  metropolis.py  mutation_proposal.py  prior.py  random_choice_proposal.py
demos/: restart_example.py  tutorial.ipynb
docs/: .nojekyll  Makefile  README.md  conf.py  index.rst  quickstart.rst  requirements.txt  tutorial.ipynb  tutorial.rst  tutorial_notebook.ipynb
docs/api/: modules.rst  pysips.rst
pysips/: __init__.py  laplace_nmll.py  metropolis.py  mutation_proposal.py  prior.py  proposal_functor.py  regressor.py  sampler.py
tests/integration/: test_log_likelihood.py  test_prior_with_bingo.py
tests/regression/: test_basic_end_to_end.py  test_regressor_end_to_end.py
tests/unit/: test_crossover_proposal.py  test_laplace_nmll.py  test_metropolis.py  test_mutation_proposal.py  test_prior.py  test_random_choice_proposal.py  test_regressor.py  test_sampler.py
